# bodhi-cast

./: .dockerignore  .env.example  .gitignore  2023-11-13_surf_data_.json  README.md  airflow.extension.dockerfile  compose.migration.yml  deno.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  etl_test.ipynb  export_all.sh  export_exclude.txt  get_sl_data.py  grib_to_schema.ipynb  gribtest.py  package-lock.json  pyproject.toml  regex_href_match.ipynb  scratch.sh  setup.sh  swellmatrix.ipynb
.github/workflows/: APITest.yml  PipelinePush.yml  get_sl_data.yml
airflow/: airflow.arm.extension.dockerfile  airflow.extension.dockerfile  requirements.txt
airflow/dags/: bodhi_waves_to_sl_db.py  debug_delete_gefs_wave_data copy.py  debug_delete_gefs_wave_data.py  debug_gefs_wave_etl_from_kafka.py  debug_gefs_wave_urls_to_kafka.py  debug_wave_etl_kafka_consumption.py  delete_old_gefs_wave_data.py  delete_old_logs.py  gefs_wave_etl_from_kafka.py  gefs_wave_urls_to_kafka.py  get_gefs_wave_urls.py  log_cleanup.py  monitor_gefs_urls_kafka.py  monitor_kafka_topics.py  noaa_station_data_to_kafka.py  noaa_station_data_to_redis.py  sl_data_etl.py  sl_data_pull.py  update_noaa_station_inventory.py  wavewatch_4_day.py  wavewatch_sample.py
airflow/mem-debug/: dag_flamegraph.sh  debug_gefs_wave_etl_from_kafka.sh  vars.sh
backend/: backend.dockerfile  env.example  pyproject.toml
backend/app/: app.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0f6997de46f3_test_migrations.py  5a37ae229ed3_add_location_column_to_spots.py  78f19d620643_create_initial_tables.py
backend/app/data/geojson/: ne_10m_coastline.geojson
backend/app/data/noaa/: setup.py  wavewatch.py
backend/app/data/spots/: spots.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/scripts/: celery_tasks.py  test_celery_tasks.py
backend/app/tests/: test_main.py
backend/app/utils/: fetch_data.py
dags/: wavewatch_sample.py
db/: Dockerfile
frontend/: frontend.dev.dockerfile  frontend.dockerfile  package-lock.json
frontend/app/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/my-app/: eslint.config.js  nginx.conf  nginx.conf.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
nbs/data/: spitcastspots.json
nbs/go/: 241213_grib.ipynb  go.mod  go.sum  tutorial.ipynb
nbs/notes/: notes.md
nbs/python/: 240129_alt_grib_processing.ipynb  240129_new_etl_pipeline.ipynb  240202_sql_playground.ipynb  240205_dag_regex.ipynb  240208_additional_weather_data.ipynb  240208_nws_coop_stations.ipynb  240212_coops_station_data.ipynb  240220_sl_surf_spots.ipynb  240221_ndbc_buoys.ipynb  240223_s3.ipynb  240329_sl_api.ipynb  240610_get_sl_spots.ipynb  240612_match_bodhi_sl_data.ipynb  deploy_calcs.ipynb  (+4 more)
three-frontend/: package-lock.json  package.json
typeflow/: Dockerfile  drizzle.config.ts  entrypoint.sh  esbuild.config.js  package.json  pnpm-lock.yaml  tsconfig.json  typeflowBasic.ts
(+105 files in other folders)
