[tool.poetry]
name = "bodhi-cast"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
requests = "^2.31.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
celery = "^5.3.5"
redis = "^5.0.1"
pygrib = "^2.1.5"
metpy = "^1.5.1"
xarray = "^2023.11.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
