[tool.poetry]
name = "bodhi-cast"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
requests = "^2.31.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
celery = "^5.3.5"
redis = "^5.0.1"
cfgrib = "^0.9.10.4"
eccodes = "^1.6.1"
xarray = "^2023.11.0"
shapely = "^2.0.2"
pyproj = "^3.6.1"
netcdf4 = "^1.6.5"
bs4 = "^0.0.1"
debugpy = "^1.8.0"
click = "^8.1.7"
geoalchemy2 = "^0.14.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
metpy = "^1.5.1"
matplotlib = ">=1.5,<3.8"
cartopy = "^0.22.0"
black = "^23.12.1"
cachetools = "^5.3.2"
basemap = "^1.3.8"
geopandas = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
